# jsonfeed

./: Cargo.toml  README.adoc
examples/: feeds.rs  jsonfeed.rs
src/: builder.rs  feed.rs  item.rs  lib.rs
