[package]
authors = ["Paul Woolcock <paul@woolcock.us>"]
description = "Parser for the JSONFeed (http://jsonfeed.org) specification\n"
documentation = "https://docs.rs/jsonfeed"
homepage = "https://github.com/pwoolcoc/jsonfeed"
license = "MIT/Apache-2.0"
name = "jsonfeed"
readme = "README.adoc"
version = "0.3.0"

[dependencies]
thiserror = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_with = "1.5.0-alpha.2"

[dev-dependencies]
reqwest = "0.6"
